# cross-environment

./: CMakeLists.txt  LANShare.pro  QtInternationalization_es.qm  README.md  lan_eng.ts  main.cpp  res.qrc  settings.cpp  settings.h
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  lanshare_setting_tw.qm
build_cmake/lanshare_autogen/3YJ5MMVV62/: moc_devicebroadcaster.cpp  moc_transfer.cpp  moc_transferserver.cpp
build_cmake/lanshare_autogen/EWIEGA46WW/: moc_singleinstance.cpp  qrc_res.cpp
build_cmake/lanshare_autogen/NLOY5YBGEN/: moc_transferinfo.cpp  moc_transfertablemodel.cpp
build_cmake/lanshare_autogen/UYX5XTB5RZ/: moc_aboutdialog.cpp  moc_mainwindow.cpp  moc_receiverselectordialog.cpp  moc_settingsdialog.cpp
build_cmake/lanshare_autogen/include/: ui_aboutdialog.h  ui_mainwindow.h  ui_receiverselectordialog.h  ui_settingsdialog.h
build_win10/: CMakeCache.txt  Makefile  cmake_install.cmake  lanshare_setting_tw.qm  lanshare_setting_twv2.qm
build_win10/lanshare_autogen/: mocs_compilation.cpp
build_win10/lanshare_autogen/3YJ5MMVV62/: moc_devicebroadcaster.cpp  moc_devicebroadcaster.cpp.d  moc_transfer.cpp  moc_transfer.cpp.d  moc_transferserver.cpp  moc_transferserver.cpp.d
build_win10/lanshare_autogen/EWIEGA46WW/: moc_singleinstance.cpp.d  qrc_res.cpp
build_win10/lanshare_autogen/NLOY5YBGEN/: moc_transferinfo.cpp  moc_transferinfo.cpp.d  moc_transfertablemodel.cpp  moc_transfertablemodel.cpp.d
build_win10/lanshare_autogen/UYX5XTB5RZ/: moc_aboutdialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_receiverselectordialog.cpp.d  moc_settingsdialog.cpp.d
build_win10/lanshare_autogen/include/: ui_aboutdialog.h
languages/: QtInternationalization_es.ts  lan.ts  lanshare_setting_tw (copy).ts  lanshare_setting_tw.qm  lanshare_setting_tw.ts  lanshare_setting_tw.txt
model/: transfertablemodel.cpp  transfertablemodel.h
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
test_build/lanshare_autogen/3YJ5MMVV62/: moc_devicebroadcaster.cpp.d  moc_transfer.cpp.d  moc_transferserver.cpp.d
test_build/lanshare_autogen/EWIEGA46WW/: moc_singleinstance.cpp.d  qrc_res.cpp
test_build/lanshare_autogen/NLOY5YBGEN/: moc_transferinfo.cpp.d  moc_transfertablemodel.cpp.d
test_build/lanshare_autogen/UYX5XTB5RZ/: moc_aboutdialog.cpp  moc_aboutdialog.cpp.d  moc_mainwindow.cpp.d  moc_receiverselectordialog.cpp  moc_receiverselectordialog.cpp.d  moc_settingsdialog.cpp  moc_settingsdialog.cpp.d
test_build/lanshare_autogen/include/: ui_mainwindow.h  ui_receiverselectordialog.h  ui_settingsdialog.h
transfer/: devicebroadcaster.h  transfer.h  transferserver.h
ui/: mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
